fixed background color on main by adding wrap

--- a/src/index.css
+++ b/src/index.css
@@ -144,6 +144,11 @@ button {
 /* Utility classes     */
 /* ------------------- */
 
+.mw-1500 {
+  max-width: 1500px;
+  margin: 0 auto;
+}
+
 .flex {
   display: flex;
 }
@@ -259,7 +264,9 @@ header {
   z-index: 900;
   width: 83%;
   top: -100%;
-  left: 2rem;
+  left: 50%;
+  max-width: 450px;
+  transform: translateX(-50%);
 
   transition: top 300ms ease-in-out;
 
@@ -271,7 +278,7 @@ header {
 }
 
 .mobile-dropdown.open {
-  top: 15%;
+  top: 25%;
 }
 
 .mobile-links {
@@ -377,12 +384,6 @@ header {
 /* ------------------- */
 
 .main-section {
-  display: grid;
-  grid-template-areas: 
-            "img"
-            "info";
-  gap: 2rem;
-  margin-bottom: 5rem;
   background-color: white;
   position: relative;
 }
@@ -396,6 +397,15 @@ header {
   bottom: -33%;
   left: 0;
   background-color: white;
+}
+
+.main-wrap {
+  display: grid;
+  grid-template-areas:
+    "img"
+    "info";
+  gap: 2rem;
+  margin-bottom: 5rem;
 }
 
 .main-info {
@@ -435,19 +445,19 @@ header {
 }
 
 @media (min-width: 1050px) {
-  .main-section {
+  .main-section::after {
+    height: 50rem;
+    bottom: -42%;
+  }
+
+  .main-wrap {
     grid-template-areas:
               "info img"
               "info img";
     grid-template-columns: 1fr 1fr;
     padding-inline: 2rem;
     margin-top: 3rem;
-  }
-
-  .main-section::after {
-    height: 50rem;
-    bottom: -42%;
-  }
+  }  
 
   .main-img {
     height: 100%;
@@ -537,6 +547,10 @@ header {
 }
 
 @media (min-width: 1050px) {
+  .shorten-section {
+    margin-inline: auto;
+  }
+
   .shortening-form {
     display: flex;
     align-items: center;
